style.css
/* ... */
input#class-query::placeholder {
    color: #888;
}

input#class-query:focus {
    outline: none;
}

.search-form .select2-selection.select2-selection--single {
    height: 35px;
}

div .search-form {
    display: flex;
    flex-wrap: wrap;
    gap: 10px 20px;
    margin-bottom: 15px;
}

#search .dropzone {
    padding: 10px 0px 10px 0px;
    border-radius: 10px;
}

.search-container {
    background-color: var(--primary-color);
    padding: 10px;
    border-top: 4px solid var(--highlight-color);
    margin-bottom: 15px;
}

.search-container h4 {
    color: whitesmoke;
    display: block;
    font-weight: 700;
}

button.primary-button {
    width: 200px;
    font-weight: bold;
    background-color: var(--sidebar-color);
    border: none;
    transition: background-color 0.3s ease;
}

button.primary-button:hover {
    background-color: #555;
    cursor: pointer;
}

button.secondary-button {
    color: var(--secondary-text);
    font-weight: bold;
    width: 200px;
    border: 2px solid var(--secondary-text);
    transition: background-color 0.3s ease;
}

button.secondary-button:hover {
    border: 2px solid var(--text-color);
    background-color: var(--bar-color);
    cursor: pointer;
}

.pagination-controls {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin-top: 20px;
    margin-bottom: -10px;
    gap: 10px;
}

.page-button {
    background-color: #f1f1f1;
    border: 1px solid #ddd;
    color: #333;
    padding: 8px 16px;
    font-size: 14px;
    border-radius: 4px;
    font-weight: 700;
    cursor: pointer;
    transition: background-color 0.3s ease, color 0.3s ease;
}

.page-button.active {
    background-color: #4CAF50;
    color: white;
    border-color: #4CAF50;
}

.page-button:hover {
    background-color: #dddddd;
}

.page-button.active:hover {
    background-color: #3a783c;
}

.spinner {
    position: fixed;
    display: none;
    top: 50%;
    left: 46%;
    width: 125px;
    height: 120px;
    animation: spin 0.7s linear infinite;
    transform-style: preserve-3d;
}

@keyframes spin {
    0% {
        transform: rotateY(0deg);
    }

    100% {
        transform: rotateY(360deg);
    }
}

/* Add line to top of border*/

.add-line {
    position: relative;
    border-top: 1px solid #dee2e6;
}

.remove-year-btn {
    position: absolute;
    top: 30%;
    right: 10px;
    display: inline-block;
    width: 20px;
    height: 20px;
    cursor: pointer;
}

.remove-year-btn::before,
.remove-year-btn::after {
    content: '';
    position: absolute;
    top: 50%;
    width: 100%;
    height: 2px;
    background-color: white;
    transition: transform 0.3s ease, width 0.3s ease;
}

.remove-year-btn::before {
    transform: translate(-50%, -50%) rotate(45deg);
}

.remove-year-btn::after {
    transform: translate(-50%, -50%) rotate(-45deg);
}

.remove-year-btn:hover::before,
.remove-year-btn:hover::after {
    width: 120%;
}

.info-popup {
    display: none;
    position: absolute;
    background: #f9f9f9;
    border: 1px solid #ccc;
    padding: 8px;
    z-index: 20;
    border-radius: 6px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
    font-size: 14px;
    max-width: 260px;
}

.info-popup {
    display: none;
    position: absolute;
    background: #f9f9f9;
    border: 1px solid #ccc;
    padding: 8px;
    z-index: 20;
    border-radius: 6px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
    font-size: 14px;
    max-width: 260px;
}

span.information {
    font-size: 16px;
    color: var(--accent-color)
}

.require-item .information {
    margin-right: 5px;
}

span.information:hover {
    font-size: 20px;
    color: var(--button-hover-color);
    cursor: pointer;
}

.warning-box .year-header {
    border-top: none;
    background-image:
        repeating-linear-gradient(
            135deg,
            black 0px,
            black 8px,
            var(--highlight-color) 8px,
            var(--highlight-color) 16px
        );
    background-repeat: no-repeat;
    background-size: 100% 4px;
    background-position: top left;
}

.warning-list {
    width: 100%;
    flex-direction: row;
    flex-wrap: wrap;
}

.warning-item {
    width: 50%;
    background-color: rgba(255, 143, 143, 0.36);
    padding: 6px;
    border: 1px solid rgba(177, 48, 48, 0.5);
    box-shadow: 2px 2px 5px var(--shadow-color);
    color: var(--text-color);
    font-weight: 500;
    transition: transform 0.2s, box-shadow 0.2s;
    display: flex;
    justify-content: center;
}

.warnings-text span {
    color: #ffffff;
    background-color: rgb(255 0 0);
    padding: 3px 8px;
    border-radius: 5px;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
    display: inline-block;
    text-align: center;
    font-weight: 700;
}

.warnings-text {
    color: rgb(255 0 0);
    font-weight: 600;
}

.message-container {
    position: fixed;
    top: 20px;
    left: 50%;
    transform: translateX(-50%);
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
    z-index: 1000;
    width: 200px;
}

.message-box {
    width: 100%;
    padding: 10px;
    border-radius: 10px;
    color: white;
    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.37);
    display: flex;
    align-items: center;
    justify-content: space-between;
    min-width: 300px;
    opacity: 1;
    transition: opacity 0.5s ease-out;
    background: rgba(255, 255, 255, 0.2);
    backdrop-filter: blur(3px);
    border: 1px solid rgba(255, 255, 255, 0.18);
}

.message-box.fade-out {
    opacity: 0;
}

.message-box.success {
    background-color: #5cb85c98;
}

.message-box.error {
    background-color: #d9544f9b;
}

.close-button {
    position: absolute;
    top: 0px;
    right: 5px;
    background: none;
    border: none;
    color: #fff;
    font-size: 20px;
    cursor: pointer;
}

.close-button:hover {
    opacity: 0.6;
}

.feedback {
    margin-top: 40px;
    display: flex;
    justify-content: center;
}

/* Settings */
.settings-dropdown {
    position: relative;
    display: inline-block;
}
/* ... */

